--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +15,7 @@
     "@types/react": "^17.0.39",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
